WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216409
REGRESSION(
r266885
): ASSERTION FAILED: Inspector::CSSBackendDispatcher::getInlineStylesForNode(long, RefPtr<JSON::Object> &&) !result.error().isEmpty()
https://bugs.webkit.org/show_bug.cgi?id=216409
Summary
REGRESSION(r266885): ASSERTION FAILED: Inspector::CSSBackendDispatcher::getIn...
Hector Lopez
Reported
2020-09-11 09:54:38 PDT
Crash: inspector/css/pseudo-element-matches-for-pseudo-element-node.html Failure: inspector/timeline/setInstruments-errors.html Tests are a constant failure/crash according to history on macOS. Crash is seen only on Debug. Failure is across all platforms. First occurrence of failure is at
r266885
. Crash History inspector/css/pseudo-element-matches-for-pseudo-element-node.html:
https://results.webkit.org/?suite=layout-tests&test=inspector%2Fcss%2Fpseudo-element-matches-for-pseudo-element-node.html
Failure inspector/timeline/setInstruments-errors.html:
https://results.webkit.org/?suite=layout-tests&test=inspector%2Ftimeline%2FsetInstruments-errors.html
Crash log/StdErr: ASSERTION FAILED: !result.error().isEmpty() /Volumes/Data/slave/catalina-debug/build/WebKitBuild/Debug/DerivedSources/JavaScriptCore/inspector/InspectorBackendDispatchers.cpp(830) : void Inspector::CSSBackendDispatcher::getInlineStylesForNode(long, RefPtr<JSON::Object> &&) 1 0x1082a82a9 WTFCrash 2 0x1099c761b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1095a25c3 Inspector::CSSBackendDispatcher::getInlineStylesForNode(long, WTF::RefPtr<WTF::JSONImpl::Object, WTF::DumbPtrTraits<WTF::JSONImpl::Object> >&&) 4 0x1095a18b7 Inspector::CSSBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<WTF::JSONImpl::Object, WTF::DumbPtrTraits<WTF::JSONImpl::Object> >&&) 5 0x109599e15 Inspector::BackendDispatcher::dispatch(WTF::String const&) 6 0x126feaabe WebCore::InspectorController::dispatchMessageFromFrontend(WTF::String const&) 7 0x126ffab86 WebCore::InspectorBackendDispatchTask::dispatchOneMessage() 8 0x126ffaa9f WebCore::InspectorBackendDispatchTask::scheduleOneShot()::'lambda'()::operator()() const 9 0x126ffa7fe WTF::Detail::CallableWrapper<WebCore::InspectorBackendDispatchTask::scheduleOneShot()::'lambda'(), void>::call() 10 0x1082d3792 WTF::Function<void ()>::operator()() const 11 0x108351025 WTF::RunLoop::performWork() 12 0x1083556b1 WTF::RunLoop::performWork(void*) 13 0x7fff35672d52 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 14 0x7fff35672cf1 __CFRunLoopDoSource0 15 0x7fff35672b0b __CFRunLoopDoSources0 16 0x7fff3567183a __CFRunLoopRun 17 0x7fff35670e3e CFRunLoopRunSpecific 18 0x1072896b7 runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) 19 0x10728889a runTestingServerLoop() 20 0x107287fd9 dumpRenderTree(int, char const**) 21 0x10728a08d DumpRenderTreeMain(int, char const**) 22 0x10731f162 main 23 0x7fff6f6ddcc9 start
Attachments
Patch
(3.97 KB, patch)
2020-09-11 10:26 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-09-11 09:55:07 PDT
<
rdar://problem/68715815
>
Hector Lopez
Comment 2
2020-09-11 10:19:13 PDT
Test expectation while investigated:
https://trac.webkit.org/changeset/266928/webkit
Devin Rousso
Comment 3
2020-09-11 10:26:30 PDT
Created
attachment 408544
[details]
Patch
Blaze Burg
Comment 4
2020-09-11 10:32:21 PDT
Comment on
attachment 408544
[details]
Patch r=me
EWS
Comment 5
2020-09-11 12:05:39 PDT
Committed
r266934
: <
https://trac.webkit.org/changeset/266934
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408544
[details]
.
Hector Lopez
Comment 6
2020-09-11 18:44:09 PDT
Rebaseline for failure inspector/timeline/setInstruments-errors.html:
https://trac.webkit.org/changeset/266967/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug