REGRESSION(r266885): ASSERTION FAILED: Inspector::CSSBackendDispatcher::getInlineStylesForNode(long, RefPtr<JSON::Object> &&) !result.error().isEmpty() https://bugs.webkit.org/show_bug.cgi?id=216409 <rdar://problem/68715815>

Reviewed by Brian Burg.

Source/WebCore:

Test: inspector/css/pseudo-element-matches-for-pseudo-element-node.html

* inspector/agents/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::getInlineStylesForNode):

LayoutTests:

* TestExpectations:
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/229246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266934 268f45cc-cd09-0410-ab3c-d52691b4dbfc